--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
 <div id="blackhole">
     <div class="centerHover"><span>ENTER</span></div>
     <div class="portfolio">
-        <h2>노이연 포트폴리오</h2>
+        <h2>노재연 포트폴리오</h2>
         <section>
             <h3>소개</h3>
-            <p>안녕하세요. 모던 웹 개발 및 시각화 경험을 가진 프론트엔드 개발자 노이연입니다.</p>
+            <p>안녕하세요. 모던 웹 개발 및 시각화 경험을 가진 프론트엔드 개발자 노재연입니다.</p>
         </section>
         <section>
             <h3>기술 스택</h3>
