--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>노이연 이력서</title>
+    <title>노재연 이력서</title>
     <style>
         /* Reset & 기본 스타일 */
         * {
@@ -129,8 +129,8 @@
     <div class="container">
         <!-- 소개 섹션 -->
         <header>
-            <img src="images/profile.jpg" alt="프로필 이미지">
-            <h1>노이연</h1>
+            <img src="images/KakaoTalk_Photo_2025-10-30-20-13-24.jpeg" alt="프로필 이미지">
+            <h1>노재연</h1>
             <p>모던하고 깔끔한 웹 개발자 | UX/UI 중심 설계 | 프론트엔드와 백엔드 경험</p>
         </header>
 
